[FIX] z-index 수정

--- a/FE/src/styles/scss/CompanyDetailPage.module.scss
+++ b/FE/src/styles/scss/CompanyDetailPage.module.scss
@@ -5,7 +5,6 @@
   background-color: #ffa7ba;
   border-radius: 50px;
   padding: 0.6rem 0.7rem;
-  z-index: 1;
 }
 
 .companydetailpage {
